# traSh

./: .env  .gitignore  Makefile  README.md  a.py  aaa.txt   aaaaaa.txt   main.py  mes.txt  p.py  pyproject.toml  test.env  test.py  tester.py  v3-api.yaml
openapi/: README.md  pyproject.toml  setup.py
openapi/.openapi-generator/: FILES
openapi/docs/: ActiveOAuth2Token.md  ActivityApi.md  ActivityTimelineMessage.md  AuthenticationApi.md  Bot.md  BotApi.md  BotDetail.md  BotEventLog.md  BotEventResult.md  BotMode.md  BotState.md  BotTokens.md  BotUser.md  Channel.md  ChannelApi.md  ChannelEvent.md  ChannelEventDetail.md  ChannelList.md  ChannelStats.md  ChannelStatsStamp.md  ChannelStatsUser.md  ChannelSubscribeLevel.md  ChannelTopic.md  ChannelViewState.md  ChannelViewer.md  ChildCreatedEvent.md  ClipApi.md  ClipFolder.md  ClippedMessage.md  DMChannel.md  ExternalProviderUser.md  FileApi.md  FileInfo.md  FileInfoThumbnail.md  ForcedNotificationChangedEvent.md  GetBot200Response.md  GetClient200Response.md  GetNotifyCitation.md  GroupApi.md  LoginSession.md  (+104 more)
openapi/openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
openapi/test/: test_active_o_auth2_token.py  test_activity_api.py  test_activity_timeline_message.py  test_authentication_api.py  test_bot.py  test_bot_api.py  test_bot_detail.py  test_bot_event_log.py  test_bot_event_result.py  test_bot_mode.py  test_bot_state.py  (+133 more)
src/: ast_.py  cmd_parser.py  environment.py  session.py  shell.py  traq_shell.py
test/: test_ast.py  test_shell.py  test_tokenizer.py  test_traqshell.py  utils.py
(+113 files in other folders)
