[tool.poetry]
name = "trash"
version = "0.1.0"
description = ""
authors = ["NapoliN <sakashita.y.aa@m.titech.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.7.0"
openapi_client = {path = "openapi"}
certifi = "^2024.2.2"
mypy = "^1.10.0"
pytest = "^8.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"